kubernetes/todo-app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  labels:
    app: todo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: us-central1-docker.pkg.dev/barry-mullan/barrymullan-docker/cscie49-todo-app:latest
        # image: barrymullan/todo-app-x86
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
          - mountPath: "/var/client-secret"
            name: client-secret
            readOnly: true
      volumes:
        - name: client-secret
          secret:
            secretName: client-secret
---
apiVersion: v1
kind: Service
metadata:
 name: todo-app-service
spec:
 ports:
 - protocol: TCP
   port: 8000
   targetPort: http
 selector:
   app: todo-app
 type: NodePort
