kubernetes/todo-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: todo-app-ip
    networking.gke.io/managed-certificates: todo-k8s-gce-ssl
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: todo-app-service
      port:
        number: 8000
